<resources>
    <string name="app_name">BaseballRecord</string>

    <string name="total">종합</string>
    <string name="team_total">팀 순위</string>
    <string name="hit">타격</string>
    <string name="pitching">투구</string>
    <string name="record">순위</string>
    <string name="name">이름</string>
    <string name="war">WAR</string>
    <string name="battingAvg">타율</string>
    <string name="onBasePercent">출루율</string>
    <string name="slugAvg">장타율</string>
    <string name="ops">OPS</string>
    <string name="date">날짜 기준</string>
    <string name="team_name">팀명</string>
    <string name="game">경기</string>
    <string name="win">승</string>
    <string name="lose">패</string>
    <string name="draw">무</string>
    <string name="winning_rate">승률</string>
    <string name="game_dis">게임차</string>
    <string name="recent_ten_game">최근10경기</string>
    <string name="continuance">연속</string>
    <string name="home_game">홈</string>
    <string name="expedition_game">원정</string>
    <string name="team_doosan">두산</string>
    <string name="team_sk">SK</string>
    <string name="team_hanhwa">한화</string>
    <string name="team_nexen">넥센</string>
    <string name="team_samsung">삼성</string>
    <string name="team_lotte">롯데</string>
    <string name="team_kia">KIA</string>
    <string name="team_lg">LG</string>
    <string name="team_nc">NC</string>
    <string name="team_kt">KT</string>
    <string name="team_all_visible">전체 ON</string>
    <string name="team_all_gone">전체 OFF</string>
    <string name="dash">-</string>


</resources>
