<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"/>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/teamRecyclerView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                android:visibility="visible"
                >
            </android.support.v7.widget.RecyclerView>

        </HorizontalScrollView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text ="연도별 순위"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:weightSum="5"
            >
            <TextView
                android:id="@+id/team_doosan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/search_border"
                android:text="@string/team_doosan"/>
            <TextView
                android:id="@+id/team_sk"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/search_border"
                android:text="@string/team_sk"/>
            <TextView
                android:id="@+id/team_hanhwa"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/search_border"
                android:text="@string/team_hanhwa"/>
            <TextView
                android:id="@+id/team_lg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/search_border"
                android:text="@string/team_lg"/>
            <TextView
                android:id="@+id/team_kt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/search_border"
                android:text="@string/team_kt"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:weightSum="5"
            >
            <TextView
                android:id="@+id/team_lotte"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/search_border"
                android:text="@string/team_lotte"/>
            <TextView
                android:id="@+id/team_samsung"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/search_border"
                android:text="@string/team_samsung"/>
            <TextView
                android:id="@+id/team_kia"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/search_border"
                android:text="@string/team_kia"/>
            <TextView
                android:id="@+id/team_nc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/search_border"
                android:text="@string/team_nc"/>
            <TextView
                android:id="@+id/team_nexen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/search_border"
                android:text="@string/team_nexen"/>
        </LinearLayout>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <SeekBar
            android:id="@+id/seekBar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_margin="8dp"
            android:layout_toLeftOf="@+id/tvYMax"
            android:layout_marginRight="5dp"
            android:max="150"
            android:paddingBottom="12dp" />

        <SeekBar
            android:id="@+id/seekBar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/seekBar2"
            android:layout_margin="8dp"
            android:layout_marginBottom="35dp"
            android:layout_toLeftOf="@+id/tvXMax"
            android:layout_marginRight="5dp"
            android:max="500"
            android:paddingBottom="12dp" />

        <TextView
            android:id="@+id/tvXMax"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/seekBar1"
            android:layout_alignParentRight="true"
            android:text="@string/dash"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="10dp"
            android:gravity="right"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvYMax"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/seekBar2"
            android:layout_alignParentRight="true"
            android:text="@string/dash"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="10dp"
            android:gravity="right"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>




</ScrollView>
