<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:id="@+id/batting_record"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="@string/hit"
                    android:gravity="center"
                    />
                <TextView
                    android:id="@+id/pitching_record"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="@string/pitching"
                    android:gravity="center"
                    />

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                >
                <TextView
                    android:layout_width="30dp"
                    android:layout_height="50dp"
                    android:text="@string/record"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:background="@color/color_ff99ff"
                    />
                <TextView
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:text="@string/name"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:background="@color/color_ff99ff"
                    />

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:text="@string/team_name"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:background="@color/color_ff99ff"
                    />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="@string/war"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:background="@color/color_ff99ff"
                    />
                <TextView
                    android:id="@+id/firstValue"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="@string/battingAvg"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:background="@color/color_ff99ff"
                    />
                <TextView
                    android:id="@+id/secondValue"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="@string/onBasePercent"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:background="@color/color_ff99ff"
                    />
                <TextView
                    android:id="@+id/thirdValue"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="@string/slugAvg"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:background="@color/color_ff99ff"
                    />

                <TextView
                    android:id="@+id/fourthValue"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="@string/ops"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:background="@color/color_ff99ff"
                    />

            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_centerHorizontal="true"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                    android:visibility="visible"
                    >
                </android.support.v7.widget.RecyclerView>

            </HorizontalScrollView>


        </LinearLayout>

        <TextView
            android:id="@+id/search_total_record"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="선수     검색"
            android:background="@drawable/search_border"
            android:textColor="#000000"
            android:gravity="center"
            />


    </FrameLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:weightSum="100"
        android:layout_gravity="start"
        android:background="#e49e9e"
        android:gravity="center">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/menuRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            >
        </android.support.v7.widget.RecyclerView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="여기는 슬라이딩 메뉴입니다~"
            android:textColor="#000"/>

    </LinearLayout>




</LinearLayout>
